# jobsubmitter

./: Dockerfile  README.md  jobsubmitter.py  jobsubmitter.yaml  pyproject.toml  submit_job.py
jobsubmitter/: config.py  consume.py  submit_job.py  watch.py
jobsubmitter/job/: base_manifests.py  config.py  job.py  nextflowconfigfile.py  provision.py
jobsubmitter/job/manifests/: k8s-executor.yaml  nxf-base.yaml  pgsc-job.yaml
jobsubmitter/transfer/: Dockerfile  init_container.py  transfer.py  transfer.sh  transfer.yaml
jobsubmitter/transfer/globus/: Dockerfile  globus_transfer.py  transfer.sh
jobsubmitter/transfer/manifests/: transfer.yaml  volume_mount.yaml
jobsubmitter/validate/: message.py  schema.py
jobsubmitter/validate/schemas/: api.json  nxf_params.json  samplesheet.json
