[tool.poetry]
name = "queuebernetes"
version = "0.1.0"
description = ""
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.5.1"
hikaru = "^0.11.0-beta.0"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
